Un po' di branding

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,9 +1,13 @@
 <footer class="bg-light p-3 text-center">
-  <div class="logo"></div>
+<!--  <div class="logo"></div> -->
   <p>
+	Underlandscape is a project founded by the Italian Ministery of University and Research 
+
+<!--
     Sample project provided by
     <a target="_blank" rel="noopener noreferrer" href="https://auth0.com">
       Auth0
     </a>
+-->
   </p>
 </footer>
