--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -5,8 +5,9 @@
     alt="Angular logo"
     width="120"
   />
-  <h1 class="mb-4">Angular Sample Project</h1>
-  <p class="lead">
+  <h1 class="mb-4">Underlandscape GIS tool Application</h1>
+<!--
+<p class="lead">
     This is a sample application that demonstrates an authentication flow for an
     SPA, using
     <a
@@ -17,4 +18,6 @@
       Angular
     </a>
   </p>
+-->
+  
 </div>
