--- a/src/app/components/home-content/tools/colleziona/colleziona.component.html
+++ b/src/app/components/home-content/tools/colleziona/colleziona.component.html
@@ -11,5 +11,9 @@
     crossorigin=""
   ></script>
 </head>
-<div id="mapid" style="height: 150px; width: 150px"></div>
+
+<h1> Caricamento manuale di dati geografici </h1>
+<div id="mapid" style="height: 300pt"> </div>
+<h2> Coordinates list </h2>
+<div id="displayCoord"> </div>
 <p>colleziona works!</p>
