Le operazioni già realizzate funzionano

--- a/src/app/components/home-content/tools/carica/carica.component.html
+++ b/src/app/components/home-content/tools/carica/carica.component.html
@@ -1,1 +1,14 @@
 <p>carica works!</p>
+<section>
+  <h3>Upload</h3>
+  <p>
+    <input #filename type="file" class="file-upload" id="uploadQuery"(change)="upload($event)" />
+  </p>
+  <div id="uploadOutput"></div>
+  <h3>Remove</h3>
+  <p>
+    <input #box type="text" id="removeQuery" placeholder="source=yyyymmdd-descr" (keyup.enter)="remove(box.value)" />
+  </p>
+  <div id="removeOutput"></div>
+  <div routerLink="/">Back to Homepage</div>
+</section>
