--- a/src/app/components/home-content/tools/colleziona/colleziona.component.html
+++ b/src/app/components/home-content/tools/colleziona/colleziona.component.html
@@ -14,6 +14,8 @@
 
 <h1> Caricamento manuale di dati geografici </h1>
 <div id="mapid" style="height: 300pt"> </div>
-<h2> Coordinates list </h2>
+<a [href]="downloadURL" download="data.json">Download as a GeoJSON file</a>
+<h3> Coordinates list </h3>
 <div id="displayCoord"> </div>
+
 <p>colleziona works!</p>
