--- a/src/app/components/home-content/tools/tools.component.html
+++ b/src/app/components/home-content/tools/tools.component.html
@@ -19,4 +19,4 @@
 <app-colleziona *ngIf="tool === 'colleziona'"> </app-colleziona>
 <app-carica *ngIf="tool === 'carica'"> </app-carica>
 
-<app-close-tool (toolClosed)="tool=''" *ngIf="tool !== ''"> </app-close-tool>
+<app-close-tool (toolClosed)="seleziona('')" *ngIf="tool !== ''"> </app-close-tool>
