--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -1,4 +1,11 @@
 <div class="navbar-nav mr-auto">
+    <img
+    class="mb-3 app-logo"
+    src="{{ heroLogo }}"
+    alt="Angular logo"
+    width="50"
+    style="margin-right: 40px"
+    />
   <div class="nav-item">
     <a
       routerLink="/"
@@ -9,7 +16,7 @@
       Home
     </a>
   </div>
-  <div class="nav-item">
+  <div class="nav-item" *ngIf="auth.isAuthenticated$ | async">
     <a
       routerLink="/profile"
       class="nav-link"
@@ -18,7 +25,7 @@
       Profile
     </a>
   </div>
-  <div class="nav-item">
+  <div class="nav-item" *ngIf="auth.isAuthenticated$ | async">
     <a
       routerLink="/external-api"
       class="nav-link"
