--- a/src/app/components/home-content/tools/colleziona/colleziona.component.html
+++ b/src/app/components/home-content/tools/colleziona/colleziona.component.html
@@ -12,10 +12,7 @@
   ></script>
 </head>
 
-<h1> Caricamento manuale di dati geografici </h1>
 <div id="mapid" style="height: 300pt"> </div>
-<a [href]="downloadURL" download="data.json">Download as a GeoJSON file</a>
-<h3> Coordinates list </h3>
+<a [href]="downloadURL" download="data.json" style="font-size:20px">Download as a GeoJSON file</a>
+<h4> Coordinates list </h4>
 <div id="displayCoord"> </div>
-
-<p>colleziona works!</p>
