--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,9 +1,5 @@
 <div>
   <h1>Profile</h1>
-  <p>
-    You use will use an ID Token to get the profile information of a logged-in
-    user.
-    <br />
-    <strong>This route should be protected</strong>.
+  <p id="profile">
   </p>
 </div>
