Esporta i campi 'name' e 'description' e visualizza il campo 'name'

--- a/src/app/components/home-content/tools/carica/carica.component.html
+++ b/src/app/components/home-content/tools/carica/carica.component.html
@@ -7,5 +7,6 @@
   <h3>Remove</h3>
   <p>
     <input #box type="text" id="removeQuery" placeholder="source=yyyymmdd-descr" (keyup.enter)="remove(box.value)" />
-  </p> 
+  </p>
+  <div id="removeOutput"></div>
 </section>
