--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -5,7 +5,7 @@
     alt="Angular logo"
     width="120"
   />
-  <h1 class="mb-4">Underlandscape GIS tool Application</h1>
+  <h1 class="mb-4">Strumenti GIS del progetto Underlandscape</h1>
 <!--
 <p class="lead">
     This is a sample application that demonstrates an authentication flow for an
