--- a/src/app/components/home-content/accesso/accesso.component.html
+++ b/src/app/components/home-content/accesso/accesso.component.html
@@ -1,4 +1,10 @@
 <div class="next-steps">
+  <p> Tramite questo portale è possibile accedere agli strumenti GIS del progetto Underlandscape.</p>
+  <p> Lo scopo degli strumenti è rendere accessibile e gestire il materiale georeferenziato prodotto nel corso del progetto.</p>
+  <p> Il materiale è protetto da uno schema di autenticazione dell'utente: per poter accedere è necessario quindi autenticarsi utilizzando le proprie credenziali Google. In casi eccezionali, per gli utenti sprovvisti di un account Google è possibile richiedere la creazione di una chiave di accesso ad uno dei partecipanti al progetto.</p>
+ 
+  
+<!--
   <h2 class="my-5 text-center">What can I do next?</h2>
 
   <div class="row">
@@ -66,3 +72,4 @@
     </div>
   </div>
 </div>
+-->
