--- a/src/app/components/home-content/tools/tools.component.html
+++ b/src/app/components/home-content/tools/tools.component.html
@@ -1,17 +1,34 @@
 <div *ngIf="tool === ''">
-  <ul>
-    <li>
-		<button (click)="seleziona('crea')">Crea una immagine da una mappa</button>
-		<p>descrizione</p>
-	</li>
-    <li>
-		<button (click)="seleziona('colleziona')">Colleziona una serie di punti</button>
-		<p>Colleziona punti</p>
-	</li>
-    <li>
-		<button (click)="seleziona('carica')">Carica dati</button> <p>Carica un file geojson</p>
-    </li>
-  </ul>
+  <div class="row">
+    <div class="col-md-5 mb-4">
+      <h6 class="mb-3">
+        <button (click)="seleziona('crea')"  class='button' >Esplora i dati nel database</button> 
+      </h6>
+      <p>Con semplici operazioni 'point and click' visualizza su una mappa il contenuto del database</p>
+    </div>
+
+    <div class="col-md"></div>
+
+    <div class="col-md-5 mb-4">
+      <h6 class="mb-3">  
+        <button (click)="seleziona('colleziona')"  class='button' >Crea un file GeoJSON selezionando punti su una mappa</button> 
+      </h6>
+      <p>Con operazioni 'point and click' sulla mappa si collezionano punti che possono essere salvati su un file locale. I file possono essere manipolati con QGis ed altri strumenti che consentano di importare file GeoJSON</p>
+    </div>
+   
+  </div>
+
+  <div class="row">
+    <div class="col-md-5 mb-4">
+      <h6 class="mb-3">
+        <button (click)="seleziona('carica')"  class='button' >Gestione del database</button> 
+      </h6>
+      <p>Consente di operare sul database con operazioni semplici su gruppi di features GeoJSON contenute in file locali</p>
+    </div>
+
+    
+  </div>
+  
 </div>
 
 <app-crea *ngIf="tool === 'crea'"> </app-crea>
