--- a/src/app/components/main-nav/main-nav.component.html
+++ b/src/app/components/main-nav/main-nav.component.html
@@ -1,11 +1,13 @@
-<div class="navbar-nav mr-auto" *ngIf="auth.isAuthenticated$ | async">
-    <img
+<a href = "https://sites.google.com/unipi.it/underlanscape" *ngIf="(auth.isAuthenticated$ | async) === false">
+  <img
     class="mb-3 app-logo"
     src="{{ heroLogo }}"
     alt="Angular logo"
     width="50"
     style="margin-right: 40px"
-    />
+  />
+</a> 
+<div class="navbar-nav mr-auto" *ngIf="auth.isAuthenticated$ | async">
   <div class="nav-item">
     <a
       routerLink="/"
