Aggiustamenti estetica e user-experience

--- a/src/app/components/home-content/accesso/accesso.component.css
+++ b/src/app/components/home-content/accesso/accesso.component.css
@@ -1,9 +1,8 @@
-
 p {
   font-size: 22px;
-  font-style: oblique;
+  font-style: normal;
   font-weight: bold;
-  color: #44b;
+  color: #222;
   margin-right: 150px;
   margin-left: 80px;
 }
