--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
+
 <div id="app" class="d-flex flex-column h-100">
   <app-nav-bar></app-nav-bar>
 
-  <div class="container flex-grow-1">
+  <div class="container flex-grow-1"  [ngStyle]="{'background-image': 'url(../../assets/mappaSfondo.png)', 'background-size':'cover'}">
     <div class="mt-5">
       <router-outlet></router-outlet>
     </div>
   </div>
-
+  
   <app-footer></app-footer>
 </div>
