--- a/src/app/components/home-content/tools/crea/crea.component.html
+++ b/src/app/components/home-content/tools/crea/crea.component.html
@@ -1,3 +1,4 @@
+<div  [ngStyle]="{'background-color': '#f3f3f3'}">
 <head>
   <link
     rel="stylesheet"
@@ -24,3 +25,5 @@
 </p>
 <div id=response>
 </div> 
+
+</div>
