--- a/src/app/components/home-content/tools/tools.component.html
+++ b/src/app/components/home-content/tools/tools.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="tool === ''">
+<div *ngIf="activeTool === ''">
   <div class="row">
     <div class="col-md-5 mb-4">
       <h6 class="mb-3">
@@ -31,8 +31,8 @@
   
 </div>
 
-<app-crea *ngIf="tool === 'crea'"> </app-crea>
-<app-colleziona *ngIf="tool === 'colleziona'"> </app-colleziona>
-<app-carica *ngIf="tool === 'carica'"> </app-carica>
+<app-crea *ngIf="activeTool === 'crea'"> </app-crea>
+<app-colleziona *ngIf="activeTool === 'colleziona'"> </app-colleziona>
+<app-carica *ngIf="activeTool === 'carica'"> </app-carica>
 
-<app-close-tool (toolClosed)="seleziona('')" *ngIf="tool !== ''"> </app-close-tool>
+<app-close-tool (toolClosed)="seleziona('')" *ngIf="activeTool !== ''"> </app-close-tool>
