--- a/src/app/components/home-content/tools/tools.component.html
+++ b/src/app/components/home-content/tools/tools.component.html
@@ -1,15 +1,15 @@
 <div *ngIf="activeTool === ''">
   <div class="row">
-    <div class="col-md-5 mb-4">
+    <div class="col-md-5 mb-4 legend">
       <h6 class="mb-3">
         <button (click)="seleziona('crea')"  class='button' >Esplora i dati nel database</button> 
       </h6>
       <p>Con semplici operazioni 'point and click' visualizza su una mappa il contenuto del database</p>
     </div>
-
+       
     <div class="col-md"></div>
 
-    <div class="col-md-5 mb-4">
+    <div class="col-md-5 mb-4 legend">
       <h6 class="mb-3">  
         <button (click)="seleziona('colleziona')"  class='button' >Crea un file GeoJSON selezionando punti su una mappa</button> 
       </h6>
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-5 mb-4">
+    <div class="col-md-5 mb-4 legend">
       <h6 class="mb-3">
         <button (click)="seleziona('carica')"  class='button' >Gestione del database</button> 
       </h6>
